crates/cribo/tests/snapshots/ruff_lint_results@file_deduplication_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/file_deduplication_basic/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
